# PW_hw5

./: main.py  man.py  mn.py
dsdsdsd/: pyproject.toml
hw5/: main.py  pyproject.toml
