[tool.poetry]
name = "dsdsdsd"
version = "0.1.0"
description = ""
authors = ["OleksandrZahar0vi4 <zaharovich007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
tabulate = "^0.9.0"
 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
